# GenAI_Service_Desk

./: .pre-commit-config.yaml  AGENTS.md  README.md  alembic.ini  pyproject.toml  pytest.ini  smoke.sh
.github/workflows/: ci.yml
docs/: knowledge.md  style.md
docs/sample_docs/: connect_wifi.md  install_vpn.md  report_bug.md  reset_password.md  setup_sso.md
infra/: .dockerignore  Dockerfile.api  Dockerfile.ollama  Dockerfile.qdrant  compose.yml  start_ollama.sh
infra/migrations/: env.py
infra/migrations/versions/: 5bcf960eb735_init.py
scripts/: db_health.py  demo_docs.json  load_docs.py  seed_demo.py  seed_manifest.json
src/helpdesk_ai/: knowledge.py  models.py  schemas.py
src/helpdesk_ai/llm/: ollama_client.py
tests/: conftest.py  test_db_health.py
tests/knowledge/: qa_pairs.json  test_chunk_counts.py  test_embedding_dim.py  test_latency.py  test_qdrant_insert.py  test_recall_at_5.py  test_tenant_isolation.py
tests/llm/: test_ollama.py
