[project]
name = "helpdesk-ai"
version = "0.0.0"
description = "Generative AI Service Desk"
readme = "README.md"
requires-python = ">=3.11"

[project.optional-dependencies]
dev = [
    "ruff",
    "pytest",
    "pytest-cov",
    "pre-commit",
]

[tool.pytest.ini_options]
addopts = "-q"

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.setuptools.packages.find]
where = ["src"]
