[project]
name = "helpdesk-ai"
version = "0.0.0"
description = "Generative AI Service Desk"
readme = "README.md"
requires-python = ">=3.11"

[project.optional-dependencies]
dev = [
    "ruff",
    "pytest",
    "pytest-cov",
    "pre-commit",
    "pydantic>=2",
    "sqlalchemy>=2",
    "alembic",
    "asyncpg",
    "psycopg2-binary",
    "httpx",
    "pytest-benchmark",
    "anyio",
    "fastapi",
    "uvicorn",
    "qdrant-client",
    "langchain-text-splitters",
    "unstructured[md,pdf]",
]

[tool.pytest.ini_options]
addopts = "-q"

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.setuptools.packages.find]
where = ["src"]
